# url-shortener

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  database.sqlite  sqlite3.lib
.github/workflows/: precommit.yml  prerelease.yml  release.yml
migrations/2021-07-21-000921_create_shares/: down.sql  up.sql
src/: common.rs  database.rs  main.rs  schema.rs  structs.rs  url_id.rs  users.rs
templates/: admin.html.tera  base.html.tera  login.html.tera
