[package]
name = "url-shortener"
version = "0.2.0"
edition = "2021"
authors = ["Josiah Bull"]

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"]}
dotenv = "0.15.0"
serde = "1.0.147"
serde_json = "1.0.87"
rand = "0.8.5"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
default-features = false
features = ["sqlite_pool"]

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
